--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <div class="d-flex justify-content-center align-items-center" style="height: 80vh;">
     <div class="btn-group">
-        <a class="btn btn-primary">Donate</a>
-        <a class="btn btn-secondary">View Donations</a>
+        <a class="btn btn-primary" asp-controller="Donate" asp-action="Index">Donate</a>
+        <a class="btn btn-secondary" asp-controller="Donate" asp-action="Donations">View Donations</a>
     </div>
 </div>
 
