--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <div class="btn-group">
         <a class="btn btn-primary" asp-controller="Donate" asp-action="Index">Donate</a>
         <a class="btn btn-secondary" asp-controller="Donate" asp-action="Donations">View Donations</a>
+        <a class="btn btn-success" asp-controller="Donate" asp-action="Verify">Verify Transaction</a>
     </div>
 </div>
 
